--- a/src/components/nogice.astro
+++ b/src/components/nogice.astro
@@ -1,18 +1,15 @@
 ---
 ---
 
-<div class="groundbg w-full h-48 bg-green-800 flex justify-center">
-  <div class="">
-    <span></span>
-  </div>
+<div class="groundbg w-full h-64 flex justify-center -mt-36">
+  <div class="flex pt-16">adasda</div>
 </div>
 
 <style>
   .groundbg {
-    /* background-image: url("https://i.imgur.com/1Z1Z1Z1.png"); */
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-image: url("/trawa.png");
+    background-repeat: repeat-x;
+    background-size: contain;
     background-position: center;
-    background-attachment: fixed;
   }
 </style>
