--- a/blog/src/components/nogice.astro
+++ b/blog/src/components/nogice.astro
@@ -2,7 +2,7 @@
 ---
 
 <div class="groundbg w-full h-64 flex justify-center -mt-36">
-  <div class="flex pt-16">adasda</div>
+  <div class="flex pt-16"></div>
 </div>
 
 <style>
