static file loading on deploy fix

--- a/blog/src/components/content.astro
+++ b/blog/src/components/content.astro
@@ -14,7 +14,7 @@ const { content, title } = Astro.props;
 <div class="bg-white rounded-xl z-20 p-8 shadow-xl my-16">
   <div class="flex py-4">
     <div class="w-16 h-16 flex" style="transform: rotate(-20deg); ">
-      <img src="listek1.png" />
+      <img src="/listek1.png" />
     </div>
     <h1 class="text-6xl manslava mb-8">{title}</h1>
   </div>
