--- a/blog/src/pages/jaz.astro
+++ b/blog/src/pages/jaz.astro
@@ -25,7 +25,7 @@ const data = (await getFirstBlogPost())[0];
   <div class="bg-white rounded-xl z-20 shadow-xl my-16 mx-auto">
     <div class="flex -mt-24 mx-auto justify-center items-end">
       <div class="w-16 h-16 flex" style="transform: rotate(-90deg); ">
-        <img src="listek1.png" />
+        <img src="/listek1.png" />
       </div>
       <div
         class="rounded-full h-56 w-56 shadow-lg"
@@ -33,7 +33,7 @@ const data = (await getFirstBlogPost())[0];
       >
       </div>
       <div class="w-16 h-16 flex" style="transform: rotate(20deg); ">
-        <img src="listek1.png" />
+        <img src="/listek1.png" />
       </div>
     </div>
     <div class="flex py-4">
