--- a/blog/src/components/oblacekButton.astro
+++ b/blog/src/components/oblacekButton.astro
@@ -16,7 +16,7 @@ const cls = url === href ? "selected" : "";
   <img src="/oblakcek2.svg" alt="" srcset="" />
 </div> -->
 <a
-  class={"manslava p-2 px-4 m-2 text-4xl z-20 text-gray-500" + cls}
+  class={"manslava p-2 px-4 m-2 md:text-4xl text-2xl z-20 text-gray-500" + cls}
   href={href}
 >
   {text}</a
