--- a/blog/src/pages/[blogname].astro
+++ b/blog/src/pages/[blogname].astro
@@ -9,8 +9,9 @@ const { blogname } = Astro.params;
 
 export function getStaticPaths() {
   return [
-    { params: { blogname: "marks" } },
-    { params: { blogname: "hedonizem" } },
+    { params: { blogname: "opis-stanja" } },
+    { params: { blogname: "filozofska-zgoda" } },
+    { params: { blogname: "studentska-balada" } },
   ];
 }
 
