--- a/blog/src/pages/jaz.astro
+++ b/blog/src/pages/jaz.astro
@@ -17,19 +17,17 @@ interface Child {
 }
 
 const data = (await getFirstBlogPost())[0];
-
-// console.log(data);
 ---
 
 <Outline title="O meni">
-  <div class="bg-white rounded-xl z-20 shadow-xl my-16 mx-auto">
+  <div class="bg-white rounded-xl z-20 shadow-xl my-16 mx-2 mt-32 md:mt-24">
     <div class="flex -mt-24 mx-auto justify-center items-end">
       <div class="w-16 h-16 flex" style="transform: rotate(-90deg); ">
         <img src="/listek1.png" />
       </div>
       <div
-        class="rounded-full h-56 w-56 shadow-lg"
-        style="background: url(/tilen.png); background-position: center;"
+        class="rounded-full md:h-56 md:w-56 w-32 h-32 shadow-lg"
+        style="background: url(/tilen.png); background-position: center; background-size: cover;"
       >
       </div>
       <div class="w-16 h-16 flex" style="transform: rotate(20deg); ">
@@ -37,7 +35,7 @@ const data = (await getFirstBlogPost())[0];
       </div>
     </div>
     <div class="flex py-4">
-      <h1 class="text-6xl manslava my-8 px-16">{data.naslov}</h1>
+      <h1 class="md:text-6xl text-4xl manslava my-8 px-16">{data.naslov}</h1>
     </div>
     <BlockRenderer content={data.content} />
     <div class="text-right w-full reenieBeenie text-4xl py-8 px-8">
