ekipca + analytics deploy

--- a/blog/src/pages/ekipa.astro
+++ b/blog/src/pages/ekipa.astro
@@ -10,9 +10,40 @@ import Outline from "../layouts/Outline.astro";
       </div>
       <h1 class="text-6xl manslava mb-8">Ekipca</h1>
     </div>
-    <p class="vollkorn text-xl py-4 text-justify"></p>
+    <p class="vollkorn text-xl py-4">
+      Tukaj so zapisani vsi, ki so pogumno stali skupaj, da smo s skupnimi močmi
+      postavili tole spletišče.
+    </p>
+    <div class="grid md:grid-cols-3 grid-cols-2 gap-6 pt-8">
+      <div class="flex flex-col">
+        <h3 class="font-bold manslava text-3xl">Lead design</h3>
+        <span class="">Tereza Hladilnik</span>
+      </div>
+      <div class="flex flex-col">
+        <h3 class="font-bold manslava text-3xl">Senior designer</h3>
+        <span class="">Nik Globočnik</span>
+      </div>
+      <div class="flex flex-col">
+        <h3 class="font-bold manslava text-3xl">Junior design</h3>
+        <span class="">Ana Hladilnik</span>
+      </div>
+      <div class="flex flex-col">
+        <h3 class="font-bold manslava text-3xl">Design QA</h3>
+        <span class="">Tina Florjančič</span>
+      </div>
+      <div class="flex flex-col">
+        <h3 class="font-bold manslava text-3xl">dev</h3>
+        <span class="">Lan Vukušič</span>
+      </div>
+      <div class="flex flex-col">
+        <h3 class="font-bold manslava text-3xl">Him</h3>
+        <span class="">Tilen Letner</span>
+      </div>
+    </div>
 
-    <div class="text-right w-full reenieBeenie text-4xl pt-8">Tilen Letner</div>
+    <div class="text-right w-full reenieBeenie text-4xl pt-8">
+      Made with love
+    </div>
   </div>
 </Outline>
 
