ekipca listek fix

--- a/blog/src/pages/ekipa.astro
+++ b/blog/src/pages/ekipa.astro
@@ -6,7 +6,7 @@ import Outline from "../layouts/Outline.astro";
   <div class="bg-white rounded-xl z-20 p-8 shadow-xl my-16 mx-auto">
     <div class="flex py-4">
       <div class="w-16 h-16 flex" style="transform: rotate(-20deg); ">
-        <img src="listek1.png" />
+        <img src="/listek1.png" />
       </div>
       <h1 class="text-6xl manslava mb-8">Ekipca</h1>
     </div>
@@ -32,8 +32,12 @@ import Outline from "../layouts/Outline.astro";
         <span class="">Tina Florjančič</span>
       </div>
       <div class="flex flex-col">
-        <h3 class="font-bold manslava text-3xl">dev</h3>
+        <h3 class="font-bold manslava text-3xl">Programmer</h3>
         <span class="">Lan Vukušič</span>
+      </div>
+      <div class="flex flex-col">
+        <h3 class="font-bold manslava text-3xl">Žan</h3>
+        <span class="">Žan Oberstar</span>
       </div>
       <div class="flex flex-col">
         <h3 class="font-bold manslava text-3xl">Him</h3>
@@ -41,8 +45,8 @@ import Outline from "../layouts/Outline.astro";
       </div>
     </div>
 
-    <div class="text-right w-full reenieBeenie text-4xl pt-8">
-      Made with love
+    <div class="text-right w-full reenieBeenie text-4xl pt-16">
+      Made with love {"<3"}
     </div>
   </div>
 </Outline>
