--- a/blog/src/layouts/Outline.astro
+++ b/blog/src/layouts/Outline.astro
@@ -87,7 +87,7 @@ const { title } = Astro.props;
       <div class="flex max-w-screen-md mx-auto justify-center">
         <OblacekButton text="Jaz" href="/jaz#content" />
         <OblacekButton text="Blog" href="/#content" />
-        <OblacekButton text="Ekipa" href="/ekipa" />
+        <OblacekButton text="Ekipa" href="/ekipa#content" />
       </div>
     </div>
     <div
