--- a/blog/src/pages/[blogname].astro
+++ b/blog/src/pages/[blogname].astro
@@ -26,5 +26,9 @@ const post: Post = (await getFirstBlogPost(blogname))[0];
 ---
 
 <Outline title="Tilenov blog">
-  <Content title={post.naslov} content={post.content} />
+  <Content
+    title={post.naslov}
+    content={post.content}
+    updatedAt={post._updatedAt}
+  />
 </Outline>
