--- a/blog/src/pages/ekipa.astro
+++ b/blog/src/pages/ekipa.astro
@@ -20,7 +20,7 @@ import Outline from "../layouts/Outline.astro";
         <span class="">Tereza Hladilnik</span>
       </div>
       <div class="flex flex-col">
-        <h3 class="font-bold manslava text-3xl">Senior designer</h3>
+        <h3 class="font-bold manslava text-3xl">Senior designe</h3>
         <span class="">Nik Globočnik</span>
       </div>
       <div class="flex flex-col">
@@ -38,6 +38,10 @@ import Outline from "../layouts/Outline.astro";
       <div class="flex flex-col">
         <h3 class="font-bold manslava text-3xl">Žan</h3>
         <span class="">Žan Oberstar</span>
+      </div>
+      <div class="flex flex-col">
+        <h3 class="font-bold manslava text-3xl">Pripombe</h3>
+        <span class="">Tia Jančič</span>
       </div>
       <div class="flex flex-col">
         <h3 class="font-bold manslava text-3xl">Him</h3>
