--- a/blog/src/components/content.astro
+++ b/blog/src/components/content.astro
@@ -6,17 +6,28 @@ import BlockRenderer from "./cms/blockRenderer.astro";
 export interface Props {
   title: string;
   content: Content[];
+  updatedAt: string;
 }
 
-const { content, title } = Astro.props;
+const { content, title, updatedAt } = Astro.props;
 ---
 
 <div class="bg-white rounded-xl z-20 md:p-8 p-0 shadow-xl my-48">
-  <div class="flex py-4">
+  <div class="flex py-4 w-full">
     <div class="w-16 h-16 flex" style="transform: rotate(-20deg); ">
       <img src="/listek1.png" />
     </div>
-    <h1 class="text-6xl manslava mb-8">{title}</h1>
+
+    <div class="flex flex-col w-full">
+      <h1 class="text-6xl manslava mb-2">
+        {title}
+      </h1>
+      <div class="w-full flex justify-end mr-8">
+        <h4 class="text-xl manslava mb-8 text-gray-500">
+          {new Date(updatedAt).toLocaleDateString()}
+        </h4>
+      </div>
+    </div>
   </div>
 
   <BlockRenderer content={content} />
