--- a/blog/src/components/nogice.astro
+++ b/blog/src/components/nogice.astro
@@ -21,15 +21,19 @@ const randomQuote =
   Object.keys(quotes)[Math.floor(Math.random() * Object.keys(quotes).length)];
 ---
 
-<div class="groundbg w-full h-96 flex justify-center -mt-36">
-  <div class="flex pt-16 w-full">
+<div class="groundbg w-full flex justify-center bg-cover bg-center bg-repeat-x">
+  <div class="flex w-full">
     <div class="flex flex-col items-center w-full">
       <div class="text-center mt-2 text-md pt-16 w-full max-w-screen-md">
-        <div class="text-lime-50 w-full font-bold text-4xl opacity-75">
+        <div
+          class="text-lime-50 w-full font-bold md:text-4xl text-xl opacity-75"
+        >
           {quotes[randomQuote]}
         </div>
         <div class="w-full flex justify-end text-xl opacity-80">
-          <span class="bg-lime-50 px-4 py-1 rounded-md text-lime-900 mt-8">
+          <span
+            class="bg-lime-50 px-4 md:text-md text-sm py-1 rounded-md text-lime-900 md:mt-8 m-8"
+          >
             {randomQuote}
           </span>
         </div>
@@ -41,9 +45,6 @@ const randomQuote =
 <style>
   .groundbg {
     background-image: url("/trawa2.png");
-    background-repeat: repeat-x;
-    background-size: contain;
-    background-position: center;
   }
   .reenieBeenie {
     font-family: "Reenie Beanie", cursive;
