--- a/blog/src/layouts/Layout.astro
+++ b/blog/src/layouts/Layout.astro
@@ -22,6 +22,12 @@ const { title } = Astro.props;
 </html>
 
 <style is:global>
+  html body {
+    margin: 0;
+    padding: 0;
+    /* zakrivamo grd css <3 */
+    overflow-x: hidden;
+  }
   .bg {
     background-image: url(/tereza.png);
     background-size: 500px;
