--- a/blog/src/components/nogice.astro
+++ b/blog/src/components/nogice.astro
@@ -21,12 +21,14 @@ const randomQuote =
   Object.keys(quotes)[Math.floor(Math.random() * Object.keys(quotes).length)];
 ---
 
-<div class="groundbg w-full flex justify-center bg-cover bg-center bg-repeat-x">
+<div
+  class="groundbg w-full flex justify-center md:bg-contain bg-cover bg-center bg-repeat-x pt-12 md:pt-24"
+>
   <div class="flex w-full">
     <div class="flex flex-col items-center w-full">
-      <div class="text-center mt-2 text-md pt-16 w-full max-w-screen-md">
+      <div class="text-center text-md w-full max-w-screen-md">
         <div
-          class="text-lime-50 w-full font-bold md:text-4xl text-xl opacity-75"
+          class="text-lime-50 w-full font-bold md:text-4xl text-xl opacity-80"
         >
           {quotes[randomQuote]}
         </div>
