--- a/blog/src/components/nogice.astro
+++ b/blog/src/components/nogice.astro
@@ -57,7 +57,7 @@
   author.innerHTML = randomQuote;
 </script>
 
-<style>
+<style is:inline>
   .groundbg {
     background-image: url("/trawa2.png");
   }
