pravilno rendranje kazala glede na čas. Prestavljeno na clientside

--- a/blog/src/pages/ekipa.astro
+++ b/blog/src/pages/ekipa.astro
@@ -20,7 +20,7 @@ import Outline from "../layouts/Outline.astro";
         <span class="">Tereza Hladilnik</span>
       </div>
       <div class="flex flex-col">
-        <h3 class="font-bold manslava text-3xl">Senior designe</h3>
+        <h3 class="font-bold manslava text-3xl">Senior design</h3>
         <span class="">Nik Globočnik</span>
       </div>
       <div class="flex flex-col">
@@ -32,7 +32,7 @@ import Outline from "../layouts/Outline.astro";
         <span class="">Tina Florjančič</span>
       </div>
       <div class="flex flex-col">
-        <h3 class="font-bold manslava text-3xl">Programmer</h3>
+        <h3 class="font-bold manslava text-3xl">Programer</h3>
         <span class="">Lan Vukušič</span>
       </div>
       <div class="flex flex-col">
