--- a/blog/src/pages/index.astro
+++ b/blog/src/pages/index.astro
@@ -14,8 +14,9 @@ export async function getBlogs() {
   return firstPost;
 }
 
-const blogs: Post[] = await getBlogs();
-const filtered = blogs.filter((blog) => new Date(blog.postAt) <= new Date());
+const blogs: Post[] = (await getBlogs()).sort((a, b) => {
+  return new Date(b.publishedAt).getTime() - new Date(a.publishedAt).getTime();
+});
 ---
 
 <Outline title="Tilenov blog">
@@ -24,20 +25,27 @@ const filtered = blogs.filter((blog) => new Date(blog.postAt) <= new Date());
   >
     <h2 class="manslava my-8 text-5xl text-amber-500">Kazalo</h2>
     {
-      filtered.map((blog) => (
-        <div class="p-4 m-4">
-          <div class="flex items-center">
-            <div
-              class="w-6 h-6 flex mr-4"
-              style={`transform: rotate(${Math.random() * 180}deg);`}
-            >
-              <img src="listek2.png" />
+      blogs.map((blog) => (
+        <>
+          <div class="p-4 m-4 hidden " id="blog">
+            <div class="flex items-center w-full">
+              <div
+                class="w-6 h-6 flex mr-4"
+                style={`transform: rotate(${Math.random() * 360}deg);`}
+              >
+                <img src="listek2.png" />
+              </div>
+              <div class="flex flex-col w-full">
+                <a class="manslava text-3xl" href={blog.url + "#content"}>
+                  {blog.naslov}
+                </a>
+                <span class="text-gray-500 reenieBeenie text-2xl">
+                  {blog.postAt}
+                </span>
+              </div>
             </div>
-            <a class="manslava text-3xl" href={blog.url + "#content"}>
-              {blog.naslov}
-            </a>
           </div>
-        </div>
+        </>
       ))
     }
   </div>
@@ -51,3 +59,14 @@ const filtered = blogs.filter((blog) => new Date(blog.postAt) <= new Date());
     font-family: "Reenie Beanie", cursive;
   }
 </style>
+
+<script define:vars={{ blogs }}>
+  // find all the hidden divs and show them
+  const hiddenDivs = document.querySelectorAll("#blog");
+  hiddenDivs.forEach((div, i) => {
+    console.log(div, new Date(blogs[i].postAt));
+    if (new Date(blogs[i].postAt) < new Date()) {
+      div.classList.remove("hidden");
+    }
+  });
+</script>
