--- a/blog/src/pages/[blogname].astro
+++ b/blog/src/pages/[blogname].astro
@@ -12,6 +12,8 @@ export function getStaticPaths() {
     { params: { blogname: "opis-stanja" } },
     { params: { blogname: "filozofska-zgoda" } },
     { params: { blogname: "studentska-balada" } },
+    { params: { blogname: "prostori-protestantov" } },
+    { params: { blogname: "kratk-premislek" } },
   ];
 }
 
