nov post dela, nov content dela, vse dela, honestly smo koncali skoraj da

--- a/blog/src/components/nogice.astro
+++ b/blog/src/components/nogice.astro
@@ -29,6 +29,8 @@ import "@fontsource/mansalva";
 
 <script>
   const quotes = {
+    "Tilen Letner": "Sej zdej mam pa že občutek da me jebete v glavo.",
+    "Tina Florjančič": "Prijeten fant, poln lepih besed.",
     "Matjaž Škrlec": "Filozof, ki te preseneti s svojimi modrostmi.",
     "Tia Jančič": "Tilen Cimer.",
     "Lan Vukušič": "Spran filozof, ki lepo preganja Čopija",
