--- a/blog/src/pages/index.astro
+++ b/blog/src/pages/index.astro
@@ -14,9 +14,10 @@ export async function getBlogs() {
   return firstPost;
 }
 
-const blogs: Post[] = (await getBlogs()).sort((a, b) => {
-  return new Date(b.publishedAt).getTime() - new Date(a.publishedAt).getTime();
-});
+const blogs: Post[] = (await getBlogs()).sort(
+  (a: any, b: any) =>
+    new Date(b.publishedAt).getTime() - new Date(a.publishedAt).getTime()
+);
 ---
 
 <Outline title="Tilenov blog">
