--- a/blog/src/pages/index.astro
+++ b/blog/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import "@fontsource/mansalva";
 import { useSanityClient, groq } from "astro-sanity";
+import { log } from "astro/dist/core/logger/core";
 import type { Post } from "../dto";
 import Outline from "../layouts/Outline.astro";
 
@@ -16,15 +17,15 @@ export async function getBlogs() {
 
 const blogs: Post[] = (await getBlogs()).sort(
   (a: any, b: any) =>
-    new Date(b.publishedAt).getTime() - new Date(a.publishedAt).getTime()
+    new Date(b.postAt).getTime() - new Date(a.postAt).getTime()
 );
 ---
 
 <Outline title="Tilenov blog">
   <div
-    class="mx-auto rounded bg-white shadow-lg flex flex-col items-center max-w-screen-md w-full py-8"
+    class="mx-auto rounded bg-white shadow-lg flex flex-col md:items-center items-start max-w-screen-md w-full py-8"
   >
-    <h2 class="manslava my-8 text-5xl text-amber-500">Kazalo</h2>
+    <h2 class="manslava my-8 mx-auto text-5xl text-amber-500">Kazalo</h2>
     {
       blogs.map((blog) => (
         <>
