--- a/blog/src/pages/index.astro
+++ b/blog/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import "@fontsource/mansalva";
+// @ts-ignore
 import { useSanityClient, groq } from "astro-sanity";
 import { log } from "astro/dist/core/logger/core";
 import type { Post } from "../dto";
