--- a/blog/src/layouts/Layout.astro
+++ b/blog/src/layouts/Layout.astro
@@ -34,4 +34,15 @@ const { title } = Astro.props;
     background-repeat: repeat;
     minheight: 100vh;
   }
+  ::-moz-selection {
+    /* Code for Firefox */
+    color: white;
+    background: orange;
+  }
+
+  ::selection {
+    color: white;
+    background: orange;
+    border-radius: 5px;
+  }
 </style>
