--- a/blog/src/pages/[blogname].astro
+++ b/blog/src/pages/[blogname].astro
@@ -1,15 +1,16 @@
 ---
 import Content from "../components/content.astro";
+import { sanityClient } from "sanity:client";
 import Outline from "../layouts/Outline.astro";
-import { useSanityClient, groq } from "astro-sanity";
+
 import type { Post } from "../dto";
 
 export interface Props {}
 const { blogname } = Astro.params;
 
 export async function getStaticPaths() {
-  const query = groq`*[_type == "blogpost"]`;
-  const posts = await useSanityClient().fetch(query);
+  const query = `*[_type == "blogpost"]`;
+  const posts = await sanityClient.fetch(query);
   return posts.map((post: any) => ({
     params: {
       blogname: post.url,
@@ -19,8 +20,8 @@ export async function getStaticPaths() {
 
 export async function getBlogPosts(url?: string) {
   if (!url) return [];
-  const query = groq`*[_type == "blogpost" && url == "${url}"]`;
-  const posts = await useSanityClient().fetch(query);
+  const query = `*[_type == "blogpost" && url == "${url}"]`;
+  const posts = await sanityClient.fetch(query);
   return posts;
 }
 
